[gd_scene load_steps=8 format=2]

[ext_resource path="res://Prefabs/UI/GameUI/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Prefabs/UI/StartMenu/Background.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/UI/StartMenu/Spacecrusher.ogg" type="AudioStream" id=3]
[ext_resource path="res://Prefabs/UI/StartMenu/StartMenu.gd" type="Script" id=4]
[ext_resource path="res://Prefabs/UI/StartMenu/selector.png" type="Texture" id=5]
[ext_resource path="res://Prefabs/UI/StartMenu/Menu_move.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 52
outline_size = 2
outline_color = Color( 0.00392157, 0.0431373, 0, 1 )
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 4.0
margin_right = 1.0
margin_bottom = 4.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
margin_bottom = 59.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleText" type="Label" parent="Control/TitleContainer"]
margin_left = 346.0
margin_right = 677.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.141176, 0.92549, 0.337255, 1 )
custom_fonts/font = SubResource( 1 )
text = "ALIEN RUN"

[node name="StartContainer" type="HBoxContainer" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -29.5
margin_bottom = 29.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectorStart" type="TextureRect" parent="Control/StartContainer"]
visible = false
margin_left = 378.0
margin_right = 425.0
margin_bottom = 59.0
texture = ExtResource( 5 )

[node name="StartText" type="Label" parent="Control/StartContainer"]
margin_left = 403.0
margin_right = 620.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.141176, 0.92549, 0.337255, 1 )
custom_fonts/font = SubResource( 1 )
text = "Start"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitContainer" type="HBoxContainer" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 120.0
margin_bottom = 179.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectorExit" type="TextureRect" parent="Control/ExitContainer"]
visible = false
margin_left = 413.0
margin_right = 460.0
margin_bottom = 59.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitText" type="Label" parent="Control/ExitContainer"]
margin_left = 438.0
margin_right = 585.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.141176, 0.92549, 0.337255, 1 )
custom_fonts/font = SubResource( 1 )
text = "Exit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="MenuMove" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
